--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -6,9 +6,9 @@ build:
   # defines where to find the code at build time and where to push the resulting image
   artifacts:
   - image: python-garage-backend
-    context: src/backend
+    context: backend
   - image: python-garage-frontend
-    context: src/frontend
+    context: frontend
 # defines the Kubernetes manifests to deploy on each run
 deploy:
   kubectl:
