Made things working end-2-end

--- a/kubernetes-manifests/garage-backend.deployment.yaml
+++ b/kubernetes-manifests/garage-backend.deployment.yaml
@@ -29,5 +29,7 @@ spec:
           value: 'trusty-splice-230419'
         - name: GAE_USE_SOCKETS_HTTPLIB
           value: 'true'
+        - name: PORT
+          value: '8080'
 
           
