--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,4 +5,6 @@ google-auth==1.6.2
 requests==2.21.0
 requests-toolbelt==0.9.1
 firebase-admin
-
+google-api-python-client
+google-auth
+google-auth-httplib2
