--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,5 +6,5 @@ requests==2.21.0
 requests-toolbelt==0.9.1
 firebase-admin
 google-api-python-client
-google-auth
 google-auth-httplib2
+google-cloud-pubsub
