--- a/kubernetes-manifests/garage-backend.deployment.yaml
+++ b/kubernetes-manifests/garage-backend.deployment.yaml
@@ -31,5 +31,5 @@ spec:
           value: 'true'
         - name: PORT
           value: '8080'
-
-          
+        - name: 'GOOGLE_APPLICATION_CREDENTIALS'
+          value: '/app/accounts/backendServiceAccount.json'         
