--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,11 @@
+firebase-admin
 Flask==0.12.4
-pyjwt==1.7.1
 flask-cors==3.0.7
 google-auth==1.6.2
-requests==2.21.0
-requests-toolbelt==0.9.1
-firebase-admin
 google-api-python-client
 google-auth-httplib2
 google-cloud-pubsub
+pyjwt==1.7.1
+requests==2.21.0
+requests-toolbelt==0.9.1
+wifi
