--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,20 @@
     "version": "0.2.0",
     "configurations": [
       {
-        "name": "Run on Kubernetes - cloudbuild",
+        "name": "Attach to K8S Pod (Python)",
+        "type": "cloudcode.kubernetes",
+        "request": "attach",
+        "language": "Python",
+        "debugPort": 3000,
+        "podSelector": {
+          "app": "python-garage",
+          "tier": "backend"
+        },
+        "localRoot": "${workspaceFolder}/backend",
+        "remoteRoot": "/app"
+      },
+      {
+        "name": "Run on K8S - cloudbuild",
         "type": "cloudcode.kubernetes",
         "request": "launch",
         "skaffoldConfig": "${workspaceFolder}/skaffold.yaml",
@@ -13,30 +26,15 @@
         "imageRegistry": "gcr.io/household-iot-277519"
       },
       {
-        "type": "cloudcode",
-        "request": "attach",
-        "name": "Debug on Kubernetes (frontend)",
-        "language": "Python",
-        "debugPort": 3000,
-        "localRoot": "${workspaceFolder}/frontend",
-        "remoteRoot": "/app",
-        "podSelector": {
-          "app": "python-garage",
-          "tier": "frontend"
-        }
-      },
-      {
-        "type": "cloudcode",
-        "request": "attach",
-        "name": "Debug on Kubernetes (backend)",
-        "language": "Python",
-        "debugPort": 3000,
-        "localRoot": "${workspaceFolder}/backend",
-        "remoteRoot": "/app",
-        "podSelector": {
-          "app": "python-garage",
-          "tier": "backend"
-        }
+        "name": "Deploy on K8S - cloudbuild",
+        "type": "cloudcode.kubernetes",
+        "request": "launch",
+        "skaffoldConfig": "${workspaceFolder}/skaffold.yaml",
+        "profile": "cloudbuild",
+        "watch": false,
+        "cleanUp": false,
+        "portForward": false,
+        "imageRegistry": "gcr.io/household-iot-277519"
       }
     ]
   }
