--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,9 +7,8 @@ build:
   artifacts:
   - image: python-garage-backend
     context: backend
-# New app-centric design does not require frontend (web) server... for now.
-#  - image: python-garage-frontend
-#    context: frontend
+  - image: python-garage-frontend
+    context: frontend
 
 # defines the Kubernetes manifests to deploy on each run
 deploy:
