--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,12 @@
+base58
 firebase-admin
-Flask==0.12.4
-flask-cors==3.0.7
-google-auth==1.6.2
+Flask==1.1.2
+flask-cors==3.0.8
+google-auth
 google-api-python-client
 google-auth-httplib2
 google-cloud-pubsub
 pyjwt==1.7.1
-requests==2.21.0
+requests==2.23.0
 requests-toolbelt==0.9.1
-wifi
+werkzeug==1.0.1
