--- a/device/requirements.txt
+++ b/device/requirements.txt
@@ -1,9 +1,12 @@
-Flask==0.12.4
+Flask==1.1.2
+flask-cors==3.0.8
 pyjwt==1.7.1
-flask-cors==3.0.7
-requests==2.21.0
+requests==2.23.0
 requests-toolbelt==0.9.1
-google-auth==1.6.2
+werkzeug==1.0.1
+google-auth
 google-api-python-client
 google-auth-httplib2
 google-cloud-pubsub
+wifi
+RPi.GPIO
