--- a/device/requirements.txt
+++ b/device/requirements.txt
@@ -1,13 +1,18 @@
 Flask==1.1.2
 flask-cors==3.0.8
-pyjwt==1.7.1
-requests==2.23.0
-requests-toolbelt==0.9.1
-werkzeug==1.0.1
+logging
 google-auth
 google-api-python-client
 google-auth-httplib2
 google-cloud-pubsub
-pyaccesspoint==0.2.5
+pyjwt==1.7.1
+requests==2.23.0
+requests-toolbelt==0.9.1
 RPi.GPIO
-wifi
+werkzeug==1.0.1
+
+wireless
+netifaces
+psutil
+pyaccesspoint==0.2.5
+packaging
