--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -25,8 +25,12 @@ dependencies:
     sdk: flutter
   
   # Support for Firebase Auth
-  google_sign_in: ^4.4.6
-  firebase_auth: ^0.16.0
+  google_sign_in: ^4.5.1
+  firebase_auth: ^0.18.0+1
+  flutter_signin_button: ^1.1.0
+
+  # Wifi (Android)
+  wifi: ^0.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
