--- a/kubernetes-manifests/garage-backend.service.yaml
+++ b/kubernetes-manifests/garage-backend.service.yaml
@@ -11,5 +11,9 @@ spec:
     app: python-garage
     tier: backend
   ports:
-  - port: 8080
-    targetPort: http-server
+    - name: http
+      port: 80
+      targetPort: http-server
+    - name: https
+      port: 443
+      targetPort: http-server
