--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   google_sign_in: ^4.5.1
   firebase_auth: ^0.18.0+1
   flutter_signin_button: ^1.1.0
+  animations: ^1.1.2
+  provider: ^4.3.2+2
+  # rxdart: ^0.24.0
 
   # Wifi (Android)
   wifi: ^0.1.5
