--- a/kubernetes-manifests/garage-backend.service.yaml
+++ b/kubernetes-manifests/garage-backend.service.yaml
@@ -1,19 +1,44 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: python-garage-backend
+  name: garage-backend
   labels:
-    app: python-garage
-    tier: backend
+    app: garage-backend
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
-    app: python-garage
-    tier: backend
+    app: garage-backend
   ports:
-    - name: http
-      port: 80
+    - port: 80
       targetPort: http-server
-    - name: https
-      port: 443
-      targetPort: http-server
+---
+apiVersion: v1
+kind: ReplicationController
+metadata:
+  name: garage-backend
+spec:
+  replicas: 3
+  template:
+    metadata:
+      labels:
+        app: garage-backend
+    spec:
+      containers:
+      - name: backend
+        image: python-garage-backend
+        ports:
+        - containerPort: 8080
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: api-ingress
+  annotations:
+    kubernetes.io/ingress.class: "gce"
+    kubernetes.io/ingress.global-static-ip-name: lb-ipv4-backend
+    networking.gke.io/managed-certificates: api-sizaha-ssl-cert
+    ingress.gcp.kubernetes.io/pre-shared-cert: api-sizaha-ssl-cert
+spec:
+  backend:
+    serviceName: garage-backend
+    servicePort: 80
