Fixed JSON request creation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,15 @@
         "watch": true,
         "cleanUp": false,
         "portForward": true,
-        "imageRegistry": "gcr.io/household-iot-277519"
+        "imageRegistry": "gcr.io/household-iot-277519",
+        "debug": [
+          {
+            "image": "python-garage-backend",
+            "sourceFileMap": {
+              "${workspaceFolder}/backend": "/app"
+            }
+          }
+        ]
       },
       {
         "name": "Deploy on K8S - cloudbuild",
@@ -42,7 +50,8 @@
               "${workspaceFolder}/backend": "/app"
             }
           }
-        ]
+        ],
+        "noDebug": true
       }
     ]
   }
